packages/lesswrong/styles/_header.scss
$header-mobile: 43px !important;

.header {
  @include max-tiny {
    height: $header-mobile;

    > div:nth-child(1) {
      height: $header-mobile;
      padding-left:0 !important;

      > div {
        > div {
          height:32px;
        }

      }

      > button {
        padding: 10px !important;
        width:26px !important;
        height:26px !important;
        color: red !important;
        margin:0 !important;
      }
    }
  }
}

.header-wrapper{
  margin-bottom: 35px;
}

.logo{
  @include small{
    text-align: center;
  }
  @include medium-large{
    display: flex;
    align-items: baseline;
    .logo-text{
      margin-right: $hmargin;
    }
    .logo-image{
      margin-right: $hmargin;
      img{
        max-width: 150px;
        max-height: 100px;
      }
    }
  }
  .tagline{
    font-size: 1.35rem;
  }
}

// This is an id instead of a class because the class wasn't rendering for weird reasons
// If you can fix it, change it to a class
.header-title {
  font-size: 19px;
  position:absolute;
  top:17px;
  left:64px;

  @include max-tiny {
    top:5px;
    left:46px;
  }

  color:$medium-text;
  a {
    text-decoration:none;
  }
  a:hover {
    text-decoration:none;
    color:$light-text;
  }
  a.logo-user {
    color:$medium-text;
    &:hover {
      color:$light-text;
    }
  }
}
.header-site-subtitle {
  margin-left: 1em;
  padding-left: 1em;
  text-transform: uppercase;
  border-left:1px solid $dark-grey;
  @include max-tiny {
    display:none;
  }
  color:$dark-text;
  &:hover {
    color:$light-text;
  }
}
.nav{
  @include flex-center;
  @include small{
    border-top: 1px solid $medium-grey;
    margin-top: $vmargin;
    padding-top: $vmargin;
    justify-content: space-between;
  }
  @include medium-large{
    .nav-user{
      margin-right: $hmargin;
    }
  }
  .nav-new-post{
    @include small{

    }
  }
}


.users-account-menu, .users-menu{
  display: inline-block;
  vertical-align: text-bottom;
  margin-top: 5px;

  @include max-tiny {
    position:relative;
    top:-10px;
    right:-2px;
  }

  color: rgba(0,0,0,0.5) !important;
  .dropdown-toggle{
    @include flex-center;
    padding: 0;
    background: none;
    img{
      margin-right: 5px;
    }
  }
}

.accounts-ui{
  padding: $vmargin;
  min-width: 240px;
  .buttons{
    .btn{
      display: block;
      width: 100%;
      text-align: center;
      margin-bottom: $vmargin;
      &:last-child{
        margin-bottom: 0;
      }
    }
  }
}

.search {
  display: inline-block;
  @include max-tiny {
    padding:0 !important;
    height:32px !important;
  }
}

.search-bar {
  display: inline-block;
  position: relative;
  .search-bar-box {
    display: inline-block;
    @include max-tiny {
      padding-right:7px;
      span {
        padding:0 !important;
        top:-12px !important;
      }
    }
  }
  .search-bar-close {
    display: none;
    position: absolute;
    top: 15px;
    right: 5px;
    cursor: pointer;
  }
  .ais-SearchBox__root {
    @include max-tiny {
      height:32px;
    }
  }
  .ais-SearchBox__submit {
    display: none;
  }
  .ais-SearchBox__input {
    padding-top: 3px;
    padding-right: 0px;
    padding-left: 48px;
    vertical-align: bottom;
    border-style: none;
    box-shadow: none;
    background-color: transparent;
    cursor: pointer;
    width:0;
    @include max-tiny {
      position:relative !important;
      top:-14px !important;
      padding-left:24px;
    }
  }
  &.open .search-bar-close {
    display: inline-block;
    @include max-tiny {
      top:0 !important;
      right:8px;
    }
  }
  &.open .ais-SearchBox__input {
    cursor: text;
    width:100%;

    border-radius:5px;

    @include max-tiny {
      background-color: #eee;
      z-index: 100000;
      width:110px;
      height:36px;
      padding-left:10px !important;
    }
  }
}

.search-results {
  transition: opacity .1s ease-in-out;
  height: 0px;
  overflow: scroll;
  opacity: 0;
  position: absolute;
  left: 0px;
  width: 100%;
  top: 64px;
  background-color: white;
  @include max-small() {
    top: 80px;
  }
  .search-results-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    flex-flow: row wrap;
    margin-top: 30px;
    width: 1100px;
    margin-left: auto;
    margin-right: auto;
    @include max-medium() {
      .section-title {
        clear:both;
        overflow: auto;
      }
      .section-title-top {
        width:calc(100% - 100px);
        float:left;
      }
      .section-title-bottom {
        width:75px;
        float:left;
      }
    }
    @include max-small() {
      width:100%;
      margin-top:0;
      overflow:scroll;
      .section-title {
        padding:0 !important;
      }
      .posts-item-comments {
        display:none;
      }
      .posts-item {
        width:100% !important;
        margin-top:0 !important;
      }

      .comments-item {
        width:100%;
      }
    }
    @include max-tiny {
      .section-title h2 {
          font-size:22px;
          padding:10px 0 0 10px;
      }
    }
    .search-results-container-left {
      max-width:720px;
      float: left;
      @include max-small() {
        max-width:100%;
        float:none;
        margin:auto;
      }
      @include max-tiny() {
        margin:0;
      }
    }
    .search-results-container-right {
      max-width: 380px;
      float: right;
      @include max-small() {
        max-width:100%;
        float:none;
        margin:auto;
      }
      @include max-tiny() {
        margin:0;
      }
    }
    .search-results-posts-content, .search-results-comments-content {
      margin-top: -10px;
    }
    .section {
      margin-left: inherit;
    }
  }

  .ais-Pagination__root {
    box-shadow: none;
    border: none;
    width: auto;
    display: block;
    border-radius: 4px;
    padding: 0;
    margin-top: 10px;
    padding-left: 0px;
  }

  .ais-Pagination__itemSelected {
    color: inherit;
    font-weight: bold;
    text-decoration: underline;
    background: inherit;
  }

  .ais-Pagination__item:hover {
    background: transparent;
    text-decoration: underline;
    .ais-Pagination__itemLink {
      color: rgba(0,0,0,0.87);
    }
  }

  .ais-Pagination__itemPage {
    display: none;
  }

  .ais-Pagination__itemPrevious {
    font-size: 0px;
    .ais-Pagination__itemLink:before {
    font-size: 14px;
    content: "<";
    }
  }

  .ais-Pagination__itemNext {
    font-size: 0px;
    .ais-Pagination__itemLink:before {
    font-size: 14px;
    content: ">";
    }
  }

  &.open {
    height: 2000px;
    overflow:scroll;
    opacity: 1;
  }
  .posts-item {
    width: 550px;
    .posts-item-score {
      display: inline;
      margin-right: 5px;
    }
    .posts-item-summary {
      max-width: 440px;
    }
  }
  .search-results-comments-item {
    width: 550px;
    padding: 10px;
  }

  .search-results-users {
    margin-left: 10px;
    padding-left: 30px;
    border-left-style: solid;
    border-left-color: rgba(0,0,0,0.1);
    border-left-width: 1px;
    .search-results-users-heading {
      h2 {
        font-size: 16px;
        font-weight: bold;
        margin-bottom: 0px;
      }
    }
    .users-item-name {
      font-size: 16px;
      display: inline-block;
      margin-right: 5px;
    }
    .users-item-meta{
      display: inline-block;
      .users-item-karma {
        font-size: 14px;
        display: inline-block;
        margin-right: 5px;
      }
      .users-item-created-date {
        display: inline-block;
      }
    }
  }

}

.notifications-menu {
  display: inline-block;
  vertical-align: top;

  @include max-tiny {
    button {
      padding:0 !important;
      margin:0 !important;
      width:24px !important;
      height:24px !important;
    }
  }
}

.notifications-menu-inbox-button {
  height: 40px;
  font-size: 14px;
  width: 100%;
  text-align: center;
  color: rgba(100, 169, 105, 0.9);
  &:hover {
    text-decoration: none !important;
    color: rgba(100, 169, 105, 0.5) !important;
  }
}

.notifications-menu-inbox-button-text {
  height: 40px;
  font-size: 14px;
  padding-top: 8px;
}

.notifications-menu-top {
  padding: 10px;
}

.notifications-menu-actions {
  float: right;
  a {
    color: rgba(0,0,0,0.5) !important;
    margin-left:8px;
  }
  a:hover {
    color: rgba(0,0,0,0.3) !important;
    text-decoration: none;
  }
}

